tests/syntax_error/generic_zero_params_define.jou
class Foo[]:  # Error: at least one generic type parameter is needed, e.g. 'class Foo[T]:'
    pass
